模型/Q1/v2/约束.md
# Q1 约束

owner_name: 罗懿
owner_code: L
owner_role: 建模手
version: v2
status: draft
based_on: 模型/Q1/v2/数学模型.md

## 单位约定

- 位移、速度、质量、力分别使用 `m`、`m/s`、`kg`、`N`；时间使用 `s`；功率使用 `W`。
- 题面频率为圆频率，单位 `s⁻¹`；角度统一使用弧度。
- 常量直线阻尼系数单位为 `N·s/m`。幂律阻尼比例系数的量纲随 `p` 变化，应以 `D=c₀|v|^p v` 的结果为 `N` 进行校验。

## 目标

在两种给定阻尼规律下求解浮子与振子前 40 个波浪周期的垂荡响应，不进行参数优化。

## 硬约束

- `ω=1.4005 s⁻¹`，激励力为 `6250 cos(ωt) N`。
- 情形一 `c=10000 N·s/m`；情形二 `c₀=10000,p=0.5`。
- 初始位移和初始速度均为零。
- 结果按 `0.2 s` 间隔输出，并写入题目指定模板 `result1-1.xlsx`、`result1-2.xlsx`。
- 浮子水动力参数只施加于浮子；振子不直接承受波浪激励。
- 静水恢复刚度取 `K_h=ρgπR_f²=31557.2982 N/m`，其有效前提是静水面位于圆柱段（吃水论证见数学模型）。

## 软约束

- 运动幅度与波面扰动保持在线性微幅波适用范围内。
- 数值结果应满足阻尼耗散非负和量纲一致性；若出现长期无界增长，应先检查符号和模型适用性。
- 情形一的长时间数值解应收敛到式（Q1-6）稳态解析解；能量残差应满足式（Q1-7）在数值容差内成立。具体容差阈值由 `algorithm-spec` 阶段在 `结果需求.md` 中定量给出。

## 边界与可行域

`0≤t≤40(2π/ω)≈179.4555 s`；状态变量取有限实数。阻尼参数非负。未给出中轴行程上限，因此不得自行增加碰撞或限位约束；若计算响应超过装置几何可接受范围，应将其报告为模型适用性风险。
